--- a/Card Game.html
+++ b/Card Game.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Card Game</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="class">
+<div class="class">
         <p>Player 1:</p>
         <div class="inner">
             <span>2&#9827</span>
