--- a/HTML Tutorial.html
+++ b/HTML Tutorial.html
@@ -38,6 +38,17 @@ HTML elements are the building blocks of HTML pages. With HTML constructs, image
       </pre>
     </div>
     <hr>
+    <div class="menu">
+      <b>Tags:</b>
+      <span>CodingScripting</span>
+      <span>head</span>
+      <span>HTML</span>
+      <span>Introduction to HTML</span>
+      <span>Landing</span>
+      <span>Links semantics</span>
+      <span>Structure</span>
+      <span>Text</span>
+      </div>
   </div>
 </body>
 </html>
