--- a/Romeo and Juliet.html
+++ b/Romeo and Juliet.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="first-text">
-        <b class="main">Romeo and Juliet</b><br>
+        <h1 class="main">Romeo and Juliet</h1><br>
         <b>ACT 1</b><br><br>
         <b>PROLOGUE</b>
         <pre>
