--- a/HTML Tutorial.html
+++ b/HTML Tutorial.html
@@ -12,29 +12,25 @@
     <h2>What is HTML?</h2>
     <div class="html-tutorial"><b>HyperText Markup Language <u>(HTML)</u></b> is the standard markup language for documents designed to be displayed in a web browser. It is often assisted by technologies such as Cascading Style Sheets (CSS) and scripting languages such as JavaScript.<br><br>  
 Web browsers receive <u>HTML</u> documents from a web server or from local storage and render the documents into multimedia web pages. <u>HTML</u> describes the structure of a web page semantically and originally included cues for its appearance.<br><br>
-<u>HTML</u> elements are the building blocks of <u>HTML</u> pages. With <u>HTML</u> constructs, images and other objects such as interactive forms may be embedded into the rendered page. <u>HTML</u> provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes, and other items. <u>HTML</u> elements are delineated by tags, written using angle brackets. Tags such as <span>&ltimg /&gt</span> and <span>&ltinput</span> /&gt directly introduce content into the page. Other tags such as <span>&ltp&gt</span> and <span>&lt/p&gt</span> surround and provide information about document text and may include sub-element tags. Browsers do not display the <u>HTML</u> tags but use them to interpret the content of the page.</div>
+<u>HTML</u> elements are the building blocks of <u>HTML</u> pages. With <u>HTML</u> constructs, images and other objects such as interactive forms may be embedded into the rendered page. <u>HTML</u> provides a means to create structured documents by denoting structural semantics for text such as headings, paragraphs, lists, links, quotes, and other items. <u>HTML</u> elements are delineated by tags, written using angle brackets. Tags such as <span>&lt;img /&gt;</span> and <span>&lt;input /&gt;</span> directly introduce content into the page. Other tags such as <span>&lt;p&gt;</span> and <span>&lt;/p&gt;</span> surround and provide information about document text and may include sub-element tags. Browsers do not display the <u>HTML</u> tags but use them to interpret the content of the page.</div>
     <hr>
     <h2>Markup</h2>
-    <div class="html-tutorial"><u>HTML</u> markup consists of several key components, including those called tags (and their attributes), character-based data types, character references and entity references. <u>HTML</u> tags most commonly come in pairs like <span>&lth1&gt</span> and <span>&lt/h1&gt</span>, although some represent empty elements and so are unpaired, for example <span>&ltimg&gt</span>. The first tag in such a pair is the start tag, and the second is the end tag (they are also called opening tags and closing tags).
+    <div class="html-tutorial"><u>HTML</u> markup consists of several key components, including those called tags (and their attributes), character-based data types, character references and entity references. <u>HTML</u> tags most commonly come in pairs like <span>&lt;h1&gt;</span> and <span>&lt;/h1&gt;</span>, although some represent empty elements and so are unpaired, for example <span>&lt;img&gt;</span>. The first tag in such a pair is the start tag, and the second is the end tag (they are also called opening tags and closing tags).<br><br>
 
-        Another important component is the <u>HTML</u> document type declaration, which triggers standards mode rendering.
+        Another important component is the <u>HTML</u> document type declaration, which triggers standards mode rendering.<br><br>
         
         The following is an example of the classic "Hello, World!" program:</div>
     <div class="program">
       <pre>
-        <code>
-          <!DOCTYPE html>
-          <html>
-            <head>
-              <title>This is a title</title>
-            </head>
-            <body>
-              <div>
-                  <p>Hello world!</p>
-              </div>
-            </body>
-          </html>
-        </code>
+          &lt;!DOCTYPE html&gt;
+          &lt;html&gt;
+                  &lt;head&gt;
+                          &lt;title&gt;<span>This is a title</span>&lt/title&gt;
+                  &lt;/head&gt;
+                  &lt;body&gt;
+                          &lt;p&gt;<span>Hello world!</span>&lt;/p&gt;
+              &lt;/body&gt;
+          &lt;/html&gt;
       </pre>
     </div>
     <hr>
