--- a/HTML Tutorial.html
+++ b/HTML Tutorial.html
@@ -25,7 +25,7 @@ Web browsers receive <u>HTML</u> documents from a web server or from local stora
           &lt;!DOCTYPE html&gt;
           &lt;html&gt;
                   &lt;head&gt;
-                          &lt;title&gt;<span>This is a title</span>&lt/title&gt;
+                          &lt;title&gt;<span>This is a title</span>&lt;/title&gt;
                   &lt;/head&gt;
                   &lt;body&gt;
                           &lt;p&gt;<span>Hello world!</span>&lt;/p&gt;
